modify army-type-test